--- a/style.css
+++ b/style.css
@@ -7870,9 +7870,6 @@ main#primary > section.hero-block > .hero-container {
     hyphens: none;
     text-wrap: pretty;
   }
-  .single-service .service-context-card--light .service-context-text br {
-    display: none;
-  }
   .single-service .service-context-card--wide {
     grid-column: span 1;
   }
